kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: heroes-hat-dev
  annotations:
    kubernetes.io/ingress.global-static-ip-name: my-studies-ingress-ip
    networking.gke.io/managed-certificates: heroes-health-cert
spec:
  rules:
    - http:
        paths:
          - path: /AuthServer/*
            backend:
              serviceName: auth-server-np
              servicePort: 50000
          - path: /mystudies-response-server/*
            backend:
              serviceName: response-server-np
              servicePort: 50000
          - path: /myStudiesUserMgmtWS/*
            backend:
              serviceName: user-registration-server-np
              servicePort: 50000
          - path: /myStudiesConsentMgmtWS/*
            backend:
              serviceName: user-registration-server-np
              servicePort: 50000
          - path: /myStudiesEnrollmentMgmt/*
            backend:
              serviceName: user-registration-server-np
              servicePort: 50000
          - path: /StudyMetaData/*
            backend:
              serviceName: study-meta-data-np
              servicePort: 50000
          - path: /studybuilder/*
            backend:
              serviceName: study-designer-np
              servicePort: 50000
          - path: /fdaResources/*
            backend:
              serviceName: study-designer-np
              servicePort: 50000
